Fixes strange overflow behaviour in modals

--- a/css/components/common/_modal.scss
+++ b/css/components/common/_modal.scss
@@ -40,7 +40,6 @@
     overflow-y: auto;
 
     @media screen and (min-width: $screen-s) {
-      overflow-y: inherit;
       height: auto;
       padding: 50px;
     }
